<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.test.weighttrackingapplicationmatthewbates.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.weighttrackingapplicationmatthewbates.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.test.weighttrackingapplicationmatthewbates.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_goal"
        android:name="com.test.weighttrackingapplicationmatthewbates.GoalFragment"
        android:label="@string/goal"
        tools:layout="@layout/fragment_goal" />
</navigation>